[gd_scene load_steps=12 format=2]

[ext_resource path="res://Scenes/UI/TitleScreen.gd" type="Script" id=1]
[ext_resource path="res://Overview/playfocused.png" type="Texture" id=2]
[ext_resource path="res://Overview/play.png" type="Texture" id=3]
[ext_resource path="res://Overview/quit.png" type="Texture" id=4]
[ext_resource path="res://Overview/options.png" type="Texture" id=5]
[ext_resource path="res://Assets/Images/bg.png" type="Texture" id=6]
[ext_resource path="res://YUGTO!/logo2.png" type="Texture" id=7]
[ext_resource path="res://Overview/quitfocused.png" type="Texture" id=8]
[ext_resource path="res://Overview/optionsfocused.png" type="Texture" id=9]
[ext_resource path="res://Scenes/UI/Credits/credits.png" type="Texture" id=10]
[ext_resource path="res://Scenes/UI/Credits/creditsfocused.png" type="Texture" id=11]

[node name="TitleScreen" type="Node2D"]
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
modulate = Color( 0.4, 0.4, 0.4, 1 )
scale = Vector2( 0.665719, 0.684831 )
texture = ExtResource( 6 )
centered = false

[node name="MarginContainer" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 1.67017
margin_right = 1282.67
margin_bottom = 722.0
custom_constants/margin_top = 20
custom_constants/margin_bottom = 20
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer"]
margin_top = 20.0
margin_right = 1280.0
margin_bottom = 702.0
alignment = 2

[node name="OptionButton" type="TextureButton" parent="MarginContainer/HBoxContainer"]
margin_left = 1196.0
margin_right = 1280.0
margin_bottom = 682.0
texture_normal = ExtResource( 5 )
texture_focused = ExtResource( 9 )

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
margin_left = 453.0
margin_top = 20.0
margin_right = 827.0
margin_bottom = 702.0
size_flags_horizontal = 4
custom_constants/separation = 16

[node name="TextureRect" type="TextureRect" parent="MarginContainer/VBoxContainer"]
margin_right = 374.0
margin_bottom = 266.0
texture = ExtResource( 7 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer"]
margin_left = 28.0
margin_top = 282.0
margin_right = 345.0
margin_bottom = 527.0
size_flags_horizontal = 4
custom_constants/separation = 10
alignment = 1

[node name="Button-Menu-Play" type="TextureButton" parent="MarginContainer/VBoxContainer/VBoxContainer"]
margin_right = 317.0
margin_bottom = 75.0
texture_normal = ExtResource( 3 )
texture_focused = ExtResource( 2 )

[node name="Credits" type="TextureButton" parent="MarginContainer/VBoxContainer/VBoxContainer"]
margin_top = 85.0
margin_right = 317.0
margin_bottom = 160.0
texture_normal = ExtResource( 10 )
texture_hover = ExtResource( 11 )

[node name="Button-Menu-Quit" type="TextureButton" parent="MarginContainer/VBoxContainer/VBoxContainer"]
margin_top = 170.0
margin_right = 317.0
margin_bottom = 245.0
texture_normal = ExtResource( 4 )
texture_focused = ExtResource( 8 )
[connection signal="pressed" from="MarginContainer/HBoxContainer/OptionButton" to="." method="_on_OptionButton_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/VBoxContainer/Button-Menu-Play" to="." method="_on_TextureButton_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/VBoxContainer/Credits" to="." method="_on_Credits_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/VBoxContainer/Button-Menu-Quit" to="." method="_on_TextureButton2_pressed"]
